clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_6.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/loop-6.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s8i, "c", align 1
        %2 = alloca s8i, "d", align 1
        %3 = alloca s32i, "nbits", align 4
        %4 = const 0 : s32i
        store %4, %0
        %5 = const -1 : s8i
        store %5, %1, align 1
        scope {
                %13 = const 1 : s32i
                store %13, %3, align 4
                for cond {
                        %27 = load %3 : s32i, align 4
                        %28 = const 100 : s32i
                        cmp
                        condition %29
                } step {
                        %14 = load %3 : s32i, align 4
                        inc
                        store %15, %3, align 4
                        yield
                } body {
                        scope {
                                %16 = const 1 : s32i
                                %17 = load %3 : s32i, align 4
                                shift
                                %19 = const 1 : s32i
                                sub
                                %21 = cast(integral) %20 : s8i
                                store %21, %2, align 1
                                scope {
                                        %22 = load %2 : s8i, align 1
                                        %23 = cast(integral) %22 : s32i
                                        %24 = load %1 : s8i, align 1
                                        %25 = cast(integral) %24 : s32i
                                        cmp
                                        if %26 {
                                                break
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %9 = load %3 : s32i, align 4
                %10 = const 100 : s32i
                cmp
                if %11 {
                        %12 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %6 = get_global @exit : (s32i) -> void*
        %7 = const 0 : s32i
        call @exit(%7) [all]
        %8 = load %0 : s32i
        return %8
}
