clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__loop_7.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/loop-7.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn foo(%arg0: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u32i):
        %6 = alloca u32i, "n", align 4
        %7 = alloca s32i, "i", align 4
        %8 = alloca s32i, "j", align 4
        store %arg0, %6
        %9 = const -1 : s32i
        store %9, %8, align 4
        scope {
                %14 = const 0 : s32i
                store %14, %7, align 4
                for cond {
                        %24 = load %7 : s32i, align 4
                        %25 = const 10 : s32i
                        cmp
                        %27 = ternary %26 ? { : bool
                                %29 = load %8 : s32i, align 4
                                %30 = const 0 : s32i
                                cmp
                                yield %31
                        } : {
                                %28 = const false : bool
                                yield %28
                        }
                        condition %27
                } step {
                        %15 = load %7 : s32i, align 4
                        inc
                        store %16, %7, align 4
                        yield
                } body {
                        scope {
                                scope {
                                        %17 = const 1 : u64i
                                        %18 = load %7 : s32i, align 4
                                        shift
                                        %20 = load %6 : u32i, align 4
                                        %21 = cast(integral) %20 : u64i
                                        cmp
                                        if %22 {
                                                %23 = load %7 : s32i, align 4
                                                store %23, %8, align 4
                                                yield
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %10 = load %8 : s32i, align 4
                %11 = const 0 : s32i
                cmp
                if %12 {
                        %13 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 64 : u32i
        call @foo(%2) [all]
        %3 = get_global @exit : (s32i) -> void*
        %4 = const 0 : s32i
        call @exit(%4) [all]
        %5 = load %0 : s32i
        return %5
}
